--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col color1">
                 <center>
-                    Hola Mundo
+                    SPB Bordados
                 </center>
             </div>
         </div>
