--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col color1">
+        <div class="row align-items-center">
+            <div class="col princ">
                 <center>
-                    Hola Mundo
+                    SPB
+                    <br>
+                    Servicios Profesionales del Bordado
                 </center>
             </div>
         </div>
