--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container-fluid">
         <div class="row align-items-center">
-            <div class="col princ">
+            <div class="princ col">
                 <center>
                     SPB
                     <br>
