--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row align-items-center">
+        <div class="row">
             <div class="col portada">
                 <center>
                     SPB
