--- a/index.html
+++ b/index.html
@@ -9,13 +9,28 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col portada">
+    <div class="container-fluid ">
+        <div class="row align-items-center portada">
+            <div class="col">
                 <center>
-                    SPB
+                    <span id="ex">
+                        <h1 class="display-1">
+                            SPB
+                        </h1>
+                    </span>
                     <br>
-                    Servicios Profesionales del Bordado
+                    <h1 class="display-4">
+                        Servicios Profesionales del Bordado
+                    </h1>
+                </center>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <center>
+                    <h1 class="display-4">
+                        Bordamos todas tus ideas
+                    </h1>
                 </center>
             </div>
         </div>
